# export-code

./: .gitignore  LICENSE  README.md  README.vi.md  TODO.md  config.json  export-code.bat  export-code.py  export_code.py  install.ps1  install.sh  launcher.py  main.py  pyproject.toml  requirements.txt  todo_report.txt
core/: __main__.py  api_mapper.py  applier.py  bundle_format.py  bundler.py  git_utils.py  launcher.py  logger_setup.py  main.py  plugin_base.py  plugin_loader.py  quality_checker.py  stats_generator.py  todo_finder.py  translator.py  tree_generator.py  utils.py
export-code-go/: README.md  build.sh  go.mod  go.sum
export-code-go/cmd/export-code/: main.go
export-code-go/internal/applier/: applier.go  applier_test.go
export-code-go/internal/bundler/: bundler.go  bundler_test.go
export-code-go/internal/cli/: apply.go  bundle.go  mapper.go  quality.go  root.go  stats.go  todo.go  tree.go
export-code-go/internal/config/: config.go
export-code-go/internal/git/: git.go
export-code-go/internal/mapper/: mapper.go  mapper_test.go
export-code-go/internal/quality/: quality.go
export-code-go/internal/stats/: stats.go  stats_test.go
export-code-go/internal/todo/: todo.go  todo_test.go
export-code-go/internal/translator/: translator.go
export-code-go/internal/tree/: tree.go  tree_test.go
export-code-go/internal/utils/: path.go  path_test.go
export-code-go/locales/: strings.json
locales/: strings.json
tests/: __init__.py  test_applier.py  test_bundle_format.py  test_plugin_loader.py  test_translator.py
