[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "export-code"
version = "1.0.0"
license = { text = "MIT" }
authors = [
  { name="Hoang Hong Huy", email="your.email@example.com" },
]
description = "A tool to bundle, analyze, and manage code projects."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pathspec",
    "tqdm",
    "inquirer",
    "watchdog",
    "colorama",
    "colorlog",
    "GitPython"
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.scripts]
export-code = "core.__main__:main"

[tool.setuptools.packages.find]
where = ["core"]
